tests/paczka1/small_fuzzy/39213087.err
Error in line 1: A641 S218 24,0
Error in line 5: A641 A129 57,6
